# AI_BMT_GUI_Submitter_Linux_ARM64_AIBMT_Hardware_Attached

./: CMakeLists.txt  License.txt  Notice.txt  README.md  classification_multiCore_wait.cpp  classification_singleCore.cpp  main.cpp
cmake/: dxapp.function.cmake  toolchain.aarch64.cmake  toolchain.riscv64.cmake
example/classification/cpu/: ImageClassification_Implementaion.cpp  Image_Classification_Implementaion.cpp  Readme.txt
example/classification/deepX-M1/: CMakeLists.txt  classification_multiCore_wait.cpp  classification_singleCore.cpp  main.cpp
example/classification/deepX-M1/compile/: classification.json
example/classification/hailo8/: main.cpp  offline.cpp  single-stream.cpp
example/llm/cpu/: llm_Implementation.cpp
example/objectDetection/cpu/: ObjectDetection_Implementation.cpp
example/objectDetection/deepX-M1/: CMakeLists.txt  main.cpp  objectDetection_singleCore.cpp
example/objectDetection/deepX-M1/compile/: objectdetection.json
example/objectDetection/hailo8/: main.cpp
example/objectDetection/hailo8/compile/: compile_3.py  objectDetection_optimize_2.py  parse_1.py
example/segmentation/cpu/: Image_Segmentation_Implementation.cpp  Segmentation_Implementation.cpp
include/: ai_bmt_gui_caller.h  ai_bmt_interface.h  bmtsensor.h  globalTimer.cpp  globalTimer.h
